--- a/admin/certchain/templates/certchain/overview.html
+++ b/admin/certchain/templates/certchain/overview.html
@@ -205,7 +205,7 @@
   {% empty %}
   <div class="row">
     <div class="span12">
-      <p id="cc-no-institutions">Your institution has no peers.</p>
+      <p id="cc-no-institutions">Your institution is not in contact with any network nodes at this time.</p>
     </div>
   </div>
   {% endfor %}
