--- a/admin/public/templates/public/viewer.html
+++ b/admin/public/templates/public/viewer.html
@@ -1,11 +1,15 @@
 {% load staticfiles %}
 {% load certchain_extras %}
 
+<!DOCTYPE html>
 <html>
   <head>
     <title>Certchain Document Viewer</title>
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'>
-    <link href="{% static 'certchain/css/viewer.css'%}" rel="stylesheet"/>
+
+    {% block stylesheets %}
+    <link href="{% static 'public/css/viewer.css'%}" rel="stylesheet"/>
+    {% endblock stylesheets %}
 
     <script type="text/javascript" src="{% static 'certchain/js/jquery-1.10.2.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'public/js/wrapper.js'%}"></script>
@@ -53,16 +57,7 @@
     <div id="raw-data" style="display: none">{{ raw_data }}</div>
     <div id="doc-id" style="display: none">{{ docid }}</div>
     <div id="document">
-      <img id="doc-bg" src="{% static 'certchain/images/diploma_bg.png' %}"/>
-      <div id="document-body">
-        {% if document_override %}
-        <span id="label-line1">INVALID</span>
-        {% else %}
-        <span id="label-line1">{{ doc.recipient }}</span>
-        <span id="label-line2">{{ doc.degree }}</span>
-        <span id="label-line3">Conferred on {{ doc.conferral_date }}</span>
-        {% endif %}
-      </div>
+      {% block document %}{% endblock document %}
     </div>
   </body>
 </html>
