Minor UI adjustments.

--- a/admin/static/css/certchain.css
+++ b/admin/static/css/certchain.css
@@ -15,17 +15,17 @@ html, body, #su-wrap {
 
 .cc-tokyo-footer,
 .cc-tokyo-brandbar {
-	background-color: #C829EB !important;
+	background-color: #7A5086 !important;
 }
 
 .cc-uva-footer,
 .cc-uva-brandbar {
-	background-color: #56B3FB !important;
+	background-color: #3E50AE !important;
 }
 
 .cc-ireland-footer,
 .cc-ireland-brandbar {
-	background-color: #97C713 !important;
+	background-color: #4C9040 !important;
 }
 
 #su-wrap {
