--- a/admin/certchain/static/certchain/css/overview.css
+++ b/admin/certchain/static/certchain/css/overview.css
@@ -5,6 +5,7 @@
   border-radius: 8px;
   box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.4);
   padding: 10px 0;
+  margin-bottom: 20px;
 }
 
 .netnode span {
@@ -15,7 +16,7 @@
 .netnode-states {
   font-size: 1.2em;
   width: 80%;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   padding: 15px 8px 8px 8px;
   background-color: #F1F1F1;
   border-bottom-left-radius: 8px;
