--- a/admin/certchain/static/certchain/css/overview.css
+++ b/admin/certchain/static/certchain/css/overview.css
@@ -123,3 +123,12 @@
   margin-top: -10px;
   margin-left: 20px;
 }
+
+.forget-node {
+  padding: 0;
+  margin: 0;
+}
+
+.forget-node .cc-btn {
+  margin: 10px;
+}
