--- a/admin/certchain/templates/certchain/certifications.html
+++ b/admin/certchain/templates/certchain/certifications.html
@@ -8,7 +8,7 @@
     <div id="cc-secure-links" class="span12">
       <span><a href="{% url 'certchain:overview' %}">Network Overview</a></span>
       <span>-</span>
-      <span><a href="{% url 'certchain:certify' %}">Certify a Document</a></span>
+      <span><a href="{% url 'certchain:certify' %}">Certify Documents</a></span>
       <span>-</span>
       <span><a class="selected" href="{% url 'certchain:manage_certifications' %}">Manage Certifications</a></span>
     </div>
