--- a/admin/certchain/templates/certchain/overview.html
+++ b/admin/certchain/templates/certchain/overview.html
@@ -14,7 +14,7 @@
     <div id="cc-secure-links" class="span12">
       <span><a class="selected" href="{% url 'certchain:overview' %}">Network Status</a></span>
       <span>-</span>
-      <span><a href="{% url 'certchain:certify' %}">Certify a Document</a></span>
+      <span><a href="{% url 'certchain:certify' %}">Certify Documents</a></span>
       <span>-</span>
       <span><a href="{% url 'certchain:manage_certifications' %}">Manage Certifications</a></span>
     </div>
