Minor UI optimization

--- a/admin/student/templates/student/documents.html
+++ b/admin/student/templates/student/documents.html
@@ -5,7 +5,7 @@
 
 {% block stylesheets %}
   {{ block.super }}
-  <link href="{% static 'public/css/student.css'%}" rel="stylesheet"/>
+  <link href="{% static 'student/css/student.css'%}" rel="stylesheet"/>
 {% endblock stylesheets %}
 
 {% block authbar %}
